<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_menu_sort_by_popularity">Sort by Popularity</string>
    <string name="sort_menu_sort_by_rating">Sort by User Rating</string>
    <string name="sort_menu_show_favorites">Show Favorites</string>
    <string name="movie_detail_overview">Overview</string>
    <string name="movie_detail_rating">User Rating</string>
    <string name="movie_detail_budget">Budget</string>
    <string name="movie_detail_release_date">Release Date</string>
    <string name="movie_detail_runtime">Runtime</string>
    <string name="movie_detail_revenue">Revenue</string>
    <string name="movie_detail_dollars">$ %s</string>
    <string name="movie_detail_minutes">%d minutes</string>
    <string name="movie_detail_trailer_header">Trailers</string>
    <string name="movie_detail_trailer_header_empty">No trailers for this movie</string>
    <string name="movie_detail_review_header">Reviews</string>
    <string name="movie_detail_review_header_empty">No reviews for this movie</string>
    <string name="main_screen_title_popular">Showing Most Popular Movies</string>
    <string name="main_screen_title_top_rated">Showing Highest Rated Movies</string>
    <string name="main_screen_title_favorites">Showing Favorite Movies</string>
    <string name="no_movie_selected_text">Welcome to Popular Movies! Please choose a movie to view details.</string>
</resources>
